--- a/Call_Center_Cleanup.ipynb
+++ b/Call_Center_Cleanup.ipynb
@@ -224,7 +224,7 @@
     "north_df = pd.read_csv('NorthCallCenter.csv')\n",
     "south_df = pd.read_csv('SouthCallCenter.csv')\n",
     "north_df.head(5)\n",
-    "#south_df.head(5)\n"
+    "\n"
    ]
   },
   {
@@ -335,10 +335,10 @@
     }
    ],
    "source": [
-    "#Code Used:\n",
+    "#Code Used: \n",
     "north_call_average_minutes = north_df[[\"Busy Minutes\", \"Not Ready Minutes\", \"Incoming Wait Time\",\"During Call Wait Time\"]].mean()\n",
     "\n",
-    "north_call_average_minutes.round(decimals = 2)\n",
+    "north_call_average_minutes.round(decimals = 2) # rounding to two decimal places\n",
     "\n"
    ]
   },
@@ -374,7 +374,7 @@
    "source": [
     "#Code Used:\n",
     "south_call_average_minutes = south_df[[\"Busy Minutes\", \"Not Ready Minutes\", \"Incoming Wait Time\",\"During Call Wait Time\"]].mean()\n",
-    "south_call_average_minutes.round(decimals = 2)"
+    "south_call_average_minutes.round(decimals = 2) # rounding to two decimal places"
    ]
   },
   {
@@ -413,7 +413,7 @@
     }
    ],
    "source": [
-    "# Code Used:\n",
+    "# Code Used: Combined calls by both centres\n",
     "time_taken_per_time_block = north_df.groupby(\"Time Block\")[\"Calls\"].sum() + south_df.groupby(\"Time Block\")[\"Calls\"].sum()\n",
     "time_taken_per_time_block"
    ]
@@ -517,14 +517,14 @@
     "# Add Additional Cells as needed.\n",
     "\n",
     "# Missing data of north call centre with heat map\n",
-    "cols = north_df.columns\n",
-    "north_df[cols].isnull().sum()"
+    "cols = north_df.columns # variable assignmet to columns\n",
+    "north_df[cols].isnull().sum() # chacking columns with missing value"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "c5a1117a",
+   "id": "f117a1ea",
    "metadata": {},
    "outputs": [
     {
@@ -562,18 +562,18 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "a6e1e51b",
+   "id": "68219fa3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "north_df = north_df.fillna(0)\n",
-    "south_df = south_df.fillna(0)"
+    "north_df = north_df.fillna(0) # replacing null with 0\n",
+    "south_df = south_df.fillna(0) # replacing null with 0"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "d3616bce",
+   "id": "bedb5068",
    "metadata": {},
    "outputs": [
     {
@@ -617,9 +617,9 @@
    ],
    "source": [
     "cols = south_df.columns\n",
-    "print(south_df[cols].isnull().sum())\n",
+    "print(south_df[cols].isnull().sum()) # checking if null present\n",
     "\n",
-    "print(north_df[cols].isnull().sum())"
+    "print(north_df[cols].isnull().sum()) # chacking if null present"
    ]
   },
   {
@@ -658,13 +658,13 @@
     "# Add Additional Cells as needed.\n",
     "\n",
     "# Sale column categories\n",
-    "north_df.groupby(\"Sale\")[\"Sale\"].first()\n"
+    "north_df.groupby(\"Sale\")[\"Sale\"].first() # checking to see sale categories there are three\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "a4dbbe4a",
+   "id": "23eb1e84",
    "metadata": {},
    "outputs": [
     {
@@ -830,7 +830,7 @@
    ],
    "source": [
     "#north_df[\"Sale\"] = north_df[\"Sale\"].apply(lambda x: x.str.strip())\n",
-    "north_df = north_df.applymap(lambda x: x.strip() if isinstance(x, str) else x)\n",
+    "north_df = north_df.applymap(lambda x: x.strip() if isinstance(x, str) else x) # removing leading and trailiing spaces in all the columns\n",
     "north_df.groupby(\"Sale\")[\"Sale\"].first()\n",
     "north_df.head()"
    ]
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "2fef6c93",
+   "id": "44b9ab11",
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "645947ad",
+   "id": "fe7f1ee2",
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1209,7 @@
     "# Add Additional Cells as needed.\n",
     "\n",
     "\n",
-    "north_df_dedupped = north_df.drop('Unnamed: 0', axis = 1).drop_duplicates()\n",
+    "north_df_dedupped = north_df.drop('Unnamed: 0', axis = 1).drop_duplicates() # removing index column and dropping duplicates\n",
     "print(north_df.shape)\n",
     "print(north_df_dedupped.shape)\n"
    ]
@@ -1217,7 +1217,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "5f3eeb1e",
+   "id": "402466a7",
    "metadata": {},
    "outputs": [
     {
@@ -1285,6 +1285,7 @@
    "source": [
     "#Code Used\n",
     "# Add Additional Cells as needed.\n",
+    "# checking percentage of repeting values in columns that can make column unnecessary\n",
     "num_rows = len(north_df_dedupped.index)\n",
     "north_df_dedupped_low_information_cols = [] #\n",
     "\n",
@@ -1302,7 +1303,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "3516d1a5",
+   "id": "40dd518a",
    "metadata": {},
    "outputs": [
     {
@@ -1336,6 +1337,7 @@
     }
    ],
    "source": [
+    "# checking percentage of repeting values in columns that can make column unnecessary\n",
     "num_rows = len(south_df_dedupped.index)\n",
     "south_df_dedupped_low_information_cols = [] #\n",
     "\n",
@@ -1353,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ca5b8b3",
+   "id": "0f35c173",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1396,7 +1398,7 @@
     "# Create dataframe for the entire company named df\n",
     "\n",
     "frames = [north_df_dedupped,south_df_dedupped]\n",
-    "df = pd.concat(frames)\n",
+    "df = pd.concat(frames) # combining two datasets\n",
     "print(\"combined set:\", df.shape, \"\\nnorth_df_dedupped:\", north_df_dedupped.shape, \"\\nsouth_df_dedupped:\", south_df_dedupped.shape)\n",
     "\n"
    ]
@@ -1416,355 +1418,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 370,
    "id": "3953f09a",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Rep ID</th>\n",
-       "      <th>Branch</th>\n",
-       "      <th>Lost Call</th>\n",
-       "      <th>Abandoned</th>\n",
-       "      <th>Busy Minutes</th>\n",
-       "      <th>Not Ready Minutes</th>\n",
-       "      <th>Incoming Wait Time</th>\n",
-       "      <th>During Call Wait Time</th>\n",
-       "      <th>Calls</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Brent</td>\n",
-       "      <td>North</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>362</td>\n",
-       "      <td>71</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>117</td>\n",
-       "      <td>37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Eric</td>\n",
-       "      <td>South</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>361</td>\n",
-       "      <td>54</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>112</td>\n",
-       "      <td>35</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Randy</td>\n",
-       "      <td>South</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>312</td>\n",
-       "      <td>63</td>\n",
-       "      <td>47.0</td>\n",
-       "      <td>96</td>\n",
-       "      <td>32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Sandy</td>\n",
-       "      <td>South</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>317</td>\n",
-       "      <td>59</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>96</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Helga</td>\n",
-       "      <td>South</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>292</td>\n",
-       "      <td>58</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>95</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Lilly</td>\n",
-       "      <td>North</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>307</td>\n",
-       "      <td>59</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>88</td>\n",
-       "      <td>30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Todd</td>\n",
-       "      <td>North</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>296</td>\n",
-       "      <td>58</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>97</td>\n",
-       "      <td>29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Duke</td>\n",
-       "      <td>North</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>292</td>\n",
-       "      <td>56</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>85</td>\n",
-       "      <td>29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>George</td>\n",
-       "      <td>South</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>298</td>\n",
-       "      <td>53</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>87</td>\n",
-       "      <td>29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Karl</td>\n",
-       "      <td>South</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>287</td>\n",
-       "      <td>61</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>85</td>\n",
-       "      <td>28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Kate</td>\n",
-       "      <td>South</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>283</td>\n",
-       "      <td>60</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>80</td>\n",
-       "      <td>28</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Josh</td>\n",
-       "      <td>South</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>260</td>\n",
-       "      <td>50</td>\n",
-       "      <td>31.0</td>\n",
-       "      <td>83</td>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Susan</td>\n",
-       "      <td>South</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>267</td>\n",
-       "      <td>53</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>88</td>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Joe</td>\n",
-       "      <td>North</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>246</td>\n",
-       "      <td>48</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>78</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Sharon</td>\n",
-       "      <td>South</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>257</td>\n",
-       "      <td>38</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>77</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Xander</td>\n",
-       "      <td>North</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>244</td>\n",
-       "      <td>44</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>68</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Cam</td>\n",
-       "      <td>North</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>233</td>\n",
-       "      <td>46</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>66</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Andy</td>\n",
-       "      <td>North</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>228</td>\n",
-       "      <td>43</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>65</td>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Amanda</td>\n",
-       "      <td>North</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>218</td>\n",
-       "      <td>41</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>58</td>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Alice</td>\n",
-       "      <td>South</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>199</td>\n",
-       "      <td>46</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>58</td>\n",
-       "      <td>20</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Rep ID Branch  Lost Call  Abandoned  Busy Minutes  Not Ready Minutes  \\\n",
-       "0    Brent  North          0          1           362                 71   \n",
-       "1     Eric  South          0          0           361                 54   \n",
-       "2    Randy  South          3          1           312                 63   \n",
-       "3    Sandy  South          1          0           317                 59   \n",
-       "4    Helga  South          0          2           292                 58   \n",
-       "5    Lilly  North          0          2           307                 59   \n",
-       "6     Todd  North          1          0           296                 58   \n",
-       "7     Duke  North          2          0           292                 56   \n",
-       "8   George  South          0          0           298                 53   \n",
-       "9     Karl  South          1          0           287                 61   \n",
-       "10    Kate  South          0          0           283                 60   \n",
-       "11    Josh  South          3          0           260                 50   \n",
-       "12   Susan  South          2          0           267                 53   \n",
-       "13     Joe  North          0          0           246                 48   \n",
-       "14  Sharon  South          1          1           257                 38   \n",
-       "15  Xander  North          1          0           244                 44   \n",
-       "16     Cam  North          1          0           233                 46   \n",
-       "17    Andy  North          0          3           228                 43   \n",
-       "18  Amanda  North          0          1           218                 41   \n",
-       "19   Alice  South          0          0           199                 46   \n",
-       "\n",
-       "    Incoming Wait Time  During Call Wait Time  Calls  \n",
-       "0                 17.0                    117     37  \n",
-       "1                 47.0                    112     35  \n",
-       "2                 47.0                     96     32  \n",
-       "3                 34.0                     96     31  \n",
-       "4                 36.0                     95     31  \n",
-       "5                 37.0                     88     30  \n",
-       "6                 21.0                     97     29  \n",
-       "7                 39.0                     85     29  \n",
-       "8                 41.0                     87     29  \n",
-       "9                 26.0                     85     28  \n",
-       "10                34.0                     80     28  \n",
-       "11                31.0                     83     26  \n",
-       "12                35.0                     88     26  \n",
-       "13                32.0                     78     25  \n",
-       "14                29.0                     77     25  \n",
-       "15                20.0                     68     24  \n",
-       "16                32.0                     66     24  \n",
-       "17                36.0                     65     23  \n",
-       "18                12.0                     58     22  \n",
-       "19                15.0                     58     20  "
-      ]
-     },
-     "execution_count": 258,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Branch Rep ID  Calls\n",
+      "0  North  Brent     37   Branch Rep ID  Calls\n",
+      "1  South   Eric     35\n"
+     ]
     }
    ],
    "source": [
     "# Code Used\n",
     "# Add Additional Cells as needed.\n",
+    "# grouping data by rep id followed by branch and summing the calls and finally descending list and selected highest\n",
     "repID_branch_group = df.groupby(['Rep ID', 'Branch'])\n",
     "sum_data = repID_branch_group.agg(sum).sort_values(by = ['Calls'], ascending = False).reset_index()\n",
-    "sum_data"
+    "north_highest_calls_rep = sum_data[sum_data['Branch'] == 'North'].head(1)\n",
+    "south_highest_calls_rep = sum_data[sum_data['Branch'] == 'South'].head(1)\n",
+    "print(north_highest_calls_rep[['Branch','Rep ID','Calls']],south_highest_calls_rep[['Branch','Rep ID','Calls']])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "48898029",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1850,6 +1529,7 @@
    "source": [
     "# Code Used\n",
     "# Add Additional Cells as needed.\n",
+    "# \n",
     "Company_wide_abandonment_rate = (df['Abandoned'].sum()/df['Calls'].sum()) * 100\n",
     "print(\"Company_wide:\", Company_wide_abandonment_rate.round(decimals = 2))\n",
     "branch_group = df.groupby(['Branch'])\n",
